# hw2_13_part2

./: README.md  pyproject.toml  requirements.txt
quotes/: requirements.txt
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: about_author.html  author.html  detail.html  index.html  quote.html
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  password_reset_complete.html  signup.html
quotes/utils/: config.ini  migrate.py
